# Neat-code-AI

./: ai_security_patterns.py  app.py  daily-commit.txt  github_workflows_daily-commit.yml  models.py  pyproject.toml  random-commit.txt  security_fix_explainer.py  security_fix_validator.py
.github/workflows/: github_workflows_daily-commit.yml
